some more fixes